--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="shortcut icon" type="image/png/ico" href="../static/assets/frontendmasters.png">
+    <link rel="shortcut icon" type="image/png/ico" href="https://frontendmasters.com/favicon-32x32.png">
     <title>Adopt Me</title>
 
     <link rel="stylesheet" href="./style.css">
